# crazyflie-firmware

./: Makefile  README.md
examples/demos/app_push_demo/src/: push.c
sitl_make/: CMakeLists.txt  log_param_linker.ld
src/config/: FreeRTOSConfig.h  config.h
src/hal/interface/: sensors_sim.h  socketlink.h
src/hal/src/: sensors.c  sensors_hitl.c  sensors_sim.c  socketlink.c  usec_time_sim.c
src/init/: main_sitl.c
src/lib/FreeRTOS/portable/GCC/Linux/: port.c  portmacro.h
src/modules/interface/: crtp.h  crtp_localization_service.h  log.h  param.h  pid.h
src/modules/src/: comm_sitl.c  console.c  crtp.c  crtp_localization_service.c  estimator_complementary.c  estimator_kalman.c  health.c  log.c  mem_sitl.c  planner.c  platformservice.c  position_controller_pid.c  position_estimator_altitude.c  power_distribution_hitl.c  power_distribution_sim.c  stabilizer.c  system_sitl.c  trigger.c
src/outer_ode/interface/: config.h  config_outer.h  fadbad.h  ode_dyn.h  outer_task.h
src/outer_ode/src/: aa_mod.cpp  ode_integr.cpp  outer_task.cpp
src/platform/: platform.h  platform_hitl.c
src/utils/interface/: cf_math.h  cfassert.h  debug.h
src/utils/src/: configblocksitl.c
tools/make/: targets.mk
